--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,3 +11,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+@import '~leaflet/dist/leaflet.css';
+
+.mymarker {
+  width: 200px;
+  height: 100px;
+}
